@@ -2,6 +2,7 @@
 Dingus codenamed "IC2005 demo"
 ========
 
+050523: Better error messages in texture and surface creator classes.
 050518: comparison operators to time_value added.
 		Gui always uses antialiased fonts now.
 050517: setTime() helper to CTimer added.
